test(app): add tests

--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-test-renderer": "^16.8.6",
+    "redux-mock-store": "^1.5.3"
+  }
 }
